<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.john.bookprogress.StatementDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/StatementDetails_Name"
        android:id="@+id/Statement_Details_Name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/StatementDetails_CurrentPage"
        android:id="@+id/Statement_Details_Current_Page"
        android:layout_below="@+id/Statement_Details_Name"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/StatementDetails_TotalPage"
        android:id="@+id/Statement_Details_Total_Page"
        android:layout_below="@+id/Statement_Details_Name"
        android:layout_toEndOf="@id/Statement_Details_Current_Page" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/ProgressBar"
        android:id="@+id/Statement_Details_Progress"
        android:layout_below="@+id/Statement_Details_Current_Page"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:id="@+id/Statement_Details_ProgressBar"
        android:layout_below="@+id/Statement_Details_Current_Page"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarNeutralButtonStyle"
            android:text="@string/StatementDetails_Confirm"
            android:onClick="ConfirmDetails"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarNeutralButtonStyle"
            android:text="@string/StatementDetails_Modify"
            android:id="@+id/ModifyButton"
            android:onClick="ModifyDetails"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarNeutralButtonStyle"
            android:text="@string/StatementDetails_Delete"
            android:id="@+id/DeleteButton"
            android:onClick="DeleteStatement"/>
    </LinearLayout>
</RelativeLayout>
