<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.john.bookprogress.AddStateActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appbarlayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/EditText_CurrentPage"
            android:layout_alignStart="@+id/TextView_CurrentPage"
            android:textSize="12pt"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/AddActivity_Name"
            android:id="@+id/TextView_Name" />
        <EditText
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/appbarlayout"
            android:layout_alignParentEnd="true"
            android:textSize="12pt"
            android:inputType="text"
            android:id="@+id/EditText_Name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/EditText_CurrentPage"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="12pt"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/AddActivity_CurrentPage"
            android:id="@+id/TextView_CurrentPage" />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditText_Name"
            android:layout_alignParentEnd="true"
            android:textSize="12pt"
            android:inputType="number"
            android:id="@+id/EditText_CurrentPage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditText_TotalPage"
            android:layout_alignStart="@+id/TextView_CurrentPage"
            android:textSize="12pt"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/AddActivity_TotalPage"
            android:id="@+id/textView" />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:inputType="number"
            android:id="@+id/EditText_TotalPage"
            android:layout_below="@id/EditText_CurrentPage"
            android:layout_alignStart="@id/EditText_CurrentPage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddActivity_Save"
            android:textColor="#00FF00"
            style="?android:attr/buttonBarNeutralButtonStyle"
            android:onClick="SaveStatement"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddActivity_Cancel"
            android:textColor="#00FF00"
            style="?android:attr/buttonBarNeutralButtonStyle"
            android:onClick="Cancel"/>
    </LinearLayout>
</RelativeLayout>
